--- a/src/main/resources/META-INF/resources/confirmation2.xhtml
+++ b/src/main/resources/META-INF/resources/confirmation2.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:confirmDialog id="confirmdialog" widgetVar="confirmdlg" global="true">  
+    <p:confirmDialog id="confirmdialog2" widgetVar="confirmdlg2">  
         <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>  
         <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>       
     </p:confirmDialog>
