--- a/src/main/resources/META-INF/resources/diamond-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/sidebar.xhtml
@@ -28,6 +28,9 @@
                         <p:menuitem id="acc_accmaster" value="Accounts"
                                     icon="fas fa-book" 
                                     outcome="/accounts/coa.xhtml" />
+                        <p:menuitem id="acc_genled" value="General Ledger"
+                                    icon="fas fa-book" 
+                                    outcome="/accounts/ledger.xhtml" />
                         <p:menuitem id="busdoc_settings" value="Document Settings"
                                     icon="fas fa-sliders-h" 
                                     outcome="/busdoc/busdocsettings.xhtml" />
