--- a/src/main/resources/META-INF/resources/accounts/coa.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/coa.xhtml
@@ -3,6 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:l="http://www.lapis.com/jsf/exporter"
                 template="/diamond-layout/template.xhtml">
     <ui:define name="title">
         Chart of Accounts
@@ -12,107 +13,75 @@
 
     <ui:define name="content">
         <h:form id="mainform">
-            <div class="ui-g">
-                <div class="ui-g-12">
+            <div class="p-grid">
+                <div class="p-col-12">
                     <p:toolbar id="toolbar">
                         <f:facet name="left">
+                            <p:commandButton id="exportPdf" icon="fa fa-file-pdf-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
+                                <p:tooltip value="Export to PDF" for="exportPdf"/>
+                                <l:dataExporter id="exportPdf" source="datalist" fileType="pdf" fileName="ChartOfAccount"/>
+                            </p:commandButton>
+
+                            <p:commandButton id="exportXLS" icon="fa fa-file-excel-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
+                                <p:tooltip value="Export to Excel" for="exportXLS"/>
+                                <l:dataExporter id="exportXLS" source="datalist" fileType="excel" fileName="ChartOfAccount"/>
+                            </p:commandButton>
+
+                            <p:commandButton id="exportCSV" icon="fa fa-file-text-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
+                                <p:tooltip value="Export to CSV" for="exportCSV"/>
+                                <l:dataExporter id="exportCSV" source="datalist" fileType="csv" fileName="ChartOfAccount"/>
+                            </p:commandButton>
+                        </f:facet>
+
+                        <f:facet name="right">
                             <p:commandButton title="New Account Group" icon="fas fa-folder-plus" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.createNewAccountGroup()}"
                                              disabled="#{chartOfAccountController.newGroupDisabled}"
                                              update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
                             <p:commandButton title="Edit Account Group" icon="fa fa-edit" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.editAccountGroup()}"
-                                             disabled="#{chartOfAccountController.editGroupDisabled}"/>
+                                             disabled="#{chartOfAccountController.editGroupDisabled}"
+                                             update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
                             <p:commandButton title="New Account" icon="fas fa-file-medical" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.createNewAccount()}"
-                                             disabled="#{chartOfAccountController.newAccountDisabled}"/>
+                                             disabled="#{chartOfAccountController.newAccountDisabled}"
+                                             update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
                             <p:commandButton title="Edit Account" icon="fa fa-file-signature" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.editAccount()}"
-                                             disabled="#{chartOfAccountController.editAccountDisabled}"/>
+                                             disabled="#{chartOfAccountController.editAccountDisabled}"
+                                             update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
                             <p:commandButton title="Clone Account" icon="fa fa-copy" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.cloneAccount()}"
-                                             disabled="#{chartOfAccountController.cloneAccountDisabled}"/>
+                                             disabled="#{chartOfAccountController.cloneAccountDisabled}"
+                                             update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
                             <p:commandButton title="Refresh Chart of Account" icon="fa fa-refresh" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.refreshCoa()}"
-                                             update="cattree"/>
-                        </f:facet>
-
-                        <f:facet name="right">
-                            <p:commandButton title="New Product" icon="fa fa-plus" process="@this" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
-                                             actionListener="#{productTreeViewController.newTab_In_newBtab()}"
-                                             disabled="#{productTreeViewController.productNewDisabled}" 
-                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Edit Product" icon="fa fa-pencil" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
-                                             disabled="#{productTreeViewController.productEditDisabled}" 
-                                             actionListener="#{productTreeViewController.editTab_In_newBtab()}"
-                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Duplicate" icon="fa fa-clone" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
-                                             disabled="#{productTreeViewController.productEditDisabled}" 
-                                             actionListener="#{productTreeViewController.cloneTab_In_newBtab()}"
-                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Refresh Products" icon="fa fa-refresh" update="prodtable" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
-                                             actionListener="#{productTreeViewController.refreshProductList()}"/>
+                                             update="datalist"/>
                         </f:facet>
                     </p:toolbar>
                 </div>
-                <div class="ui-g-4">
-                    <p:tree id="cattree" value="#{chartOfAccountController.root}" var="node" dynamic="true"
-                            style="width:100%; height:100%;" selectionMode="single" styleClass="card"
-                            selection="#{chartOfAccountController.selectedNode}">
-                        <p:ajax event="select" update="@widgetVar(ptable), :mainform:toolbar"
-                                listener="#{chartOfAccountController.onNodeSelect}" />
-                        <p:treeNode type="ROOT" expandedIcon="fa fa-book-open"
-                                    collapsedIcon="fa fa-book">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                        <p:treeNode type="GROUP" expandedIcon="fa fa-folder-open"
-                                    collapsedIcon="fa fa-folder">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                        <p:treeNode type="INTERNAL_GROUP" expandedIcon="far fa-folder-open"
-                                    collapsedIcon="far fa-folder">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                        <p:treeNode type="ACCOUNT" icon="fa fa-file-contract">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                        <p:treeNode type="INTERNAL_ACCOUNT" icon="far fa-file">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                        <p:treeNode icon="far fa-file">
-                            <h:outputText value="#{node}" />
-                        </p:treeNode>
-                    </p:tree>
-                </div>
-                <div class="ui-g-8">
-                    <p:dataTable id="prodtable" var="prod"
-                                 value="#{productTreeViewController.prodList}" widgetVar="ptable"
-                                 selection="#{productTreeViewController.selectedProduct}"
-                                 selectionMode="single" rowKey="#{prod.productid}"
-                                 emptyMessage="No Products found"
-                                 styleClass="card products-table ui-datatable-sm">
-                        <p:ajax event="rowSelect" update=":mainform:toolbar" />
-                        <p:column headerText="Stock No" sortBy="#{prod.productid}"
-                                  filterBy="#{prod.productid}" filterMatchMode="contains">
-                            <h:outputText value="#{prod.productid}" />
-                        </p:column>
-
-                        <p:column headerText="Product Name" sortBy="#{prod.productname}"
-                                  filterBy="#{prod.productname}" filterMatchMode="contains"
-                                  style="width: 50%">
-                            <h:outputText value="#{prod.productname}" />
-                        </p:column>
-
-                        <p:column headerText="Sup Code" sortBy="#{prod.supplierscode}"
-                                  filterBy="#{prod.supplierscode}" filterMatchMode="contains">
-                            <h:outputText value="#{prod.supplierscode}" />
-                        </p:column>
-
-                        <p:column headerText="Brand" sortBy="#{prod.brand.brandname}"
-                                  filterBy="#{prod.brand.brandname}" filterMatchMode="contains">
-                            <h:outputText value="#{prod.brand.brandname}" />
-                        </p:column>
-                    </p:dataTable>
+                <div class="p-col-12">
+                    <div class="card">
+                        <p:treeTable id="datalist" 
+                                     value="#{chartOfAccountController.root}" var="item"
+                                     emptyMessage="Chart of Account is empty"
+                                     selectionMode="single" 
+                                     styleClass="ui-datatable-gridlines ui-datatable-sm ui-datatable-striped"
+                                     resizableColumns="true"
+                                     selection="#{chartOfAccountController.selectedNode}">
+                            <p:ajax event="select" update="@widgetVar(ptable), :mainform:toolbar"
+                                    listener="#{chartOfAccountController.onNodeSelect}" />
+                            <p:column headerText="Account Name" style="width: 40%">
+                                <h:outputText value="#{item.accountname}" />
+                            </p:column>
+                            <p:column headerText="Account Id">
+                                <h:outputText value="#{item.accountid}" />
+                            </p:column>
+                            <p:column headerText="Type">
+                                <h:outputText value="#{item.accounttype.name}" />
+                            </p:column>
+                        </p:treeTable>
+                    </div>
                 </div>
             </div>
         </h:form>
