--- a/src/main/resources/META-INF/resources/busdoc/busdoclist.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/busdoclist.xhtml
@@ -25,6 +25,13 @@
                                              disabled="#{empty busDocListController.selected}" 
                                              actionListener="#{busDocListController.edit_in_tab()}"
                                              ajax="false" onclick="form.target = '_blank'"/>
+                            <p:commandButton id="btndelete" title="Delete #{busDocController.docInfo.docname}" icon="fa fa-trash" 
+                                             styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
+                                             disabled="#{empty busDocListController.selected}" 
+                                             actionListener="#{busDocListController.delete()}"
+                                             update="@form :growl">
+                                <p:confirm header="Confirmation" message="Sure you want to delete?" icon="fa fa-alert"/>
+                            </p:commandButton>
                             <p:commandButton id="btnrefresh" styleClass="#{systemDefaultsController.systemButtonStyle}"
                                              actionListener="#{busDocListController.refresh()}"
                                              update="@form :growl" icon="fa fa-refresh" />
@@ -39,7 +46,7 @@
                                      reflow="true"
                                      emptyMessage="No #{busDocController.docInfo.docname} found"
                                      styleClass="products-table ui-datatable-sm">
-                            <p:ajax event="rowSelect" update=":busform:btnedit"/>
+                            <p:ajax event="rowSelect" update=":busform:btnedit, :busform:btndelete"/>
 
                             <p:column headerText="Doc No" sortBy="#{item.docno}" filterBy="#{item.docno}" filterMatchMode="contains">
                                 <h:outputText value="#{item.docno}" />
@@ -89,6 +96,7 @@
                     </p:panel>
                 </div>
             </div>
+            <ui:include src="/confirmation.xhtml"/>
         </h:form>
 
     </ui:define>
