--- a/src/main/resources/META-INF/resources/busdoc/editbusdoc.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/editbusdoc.xhtml
@@ -320,7 +320,6 @@
                         </p:column>
                     </p:row>
                 </p:panelGrid>
-
             </div>
         </div>
     </ui:define>
@@ -405,7 +404,7 @@
                 </p:panel>
             </div>
         </h:form>
-        <ui:include src="/fromdocument.xhtml"/>
+        <ui:include src="/busdoc/fromdocument.xhtml"/>
     </ui:define>
 
     <ui:define name="productsearch">
