--- a/src/main/resources/META-INF/resources/pr/businesspartnerlist_1.xhtml
+++ b/src/main/resources/META-INF/resources/pr/businesspartnerlist_1.xhtml
@@ -9,12 +9,12 @@
     </ui:define>
 
     <ui:param name="viewname" value="Business Partner" />
-
+    
     <ui:define name="content">
         <h:form id="busform">
             <div class="p-grid">
                 <div class="p-col-12 p-md-12">
-                    <p:panel id="companydetails" header="Search Criteria" 
+                    <p:panel id="companydetails" header="Business Parners" 
                              collapsed="false" toggleable="true" styleClass="card">
                         <f:facet name="actions">
                             <p:commandButton id="btnrefresh" styleClass="#{systemDefaultsController.systemButtonStyle}"
@@ -38,85 +38,65 @@
                 </div>
 
                 <div class="p-col-12 p-md-12">
-                    <div class="card table-demo">
+                    <p:panel id="companylist" header="List of Business Partners" styleClass="card ui-fluid">
+                        <f:facet name="actions">
+                            <p:commandButton id="btnnew" title="New Business Partner" icon="fa fa-plus" process="@this"
+                                             styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
+                                             actionListener="#{businessPartnerController.newTab_In_newBtab()}"
+                                             ajax="false" onclick="form.target = '_blank'"/>
+                            <p:commandButton id="btnedit" title="New Business Partner" icon="fa fa-pencil" process="@this" 
+                                             styleClass="#{systemDefaultsController.systemButtonStyle}"
+                                             disabled="#{businessPartnerController.companyDisabled}" 
+                                             actionListener="#{businessPartnerController.editTab_In_newBtab()}"
+                                             ajax="false" onclick="form.target = '_blank'"/>
+                        </f:facet>
+
                         <p:dataTable id="bustable" var="bus" widgetVar="btable"
                                      value="#{businessPartnerController.items}"
                                      selectionMode="single"
                                      selection="#{businessPartnerController.selected}"
                                      rowKey="#{bus.partnerid}"
-                                     reflow="true"
                                      emptyMessage="No Business Partner found"
-                                     styleClass="ui-datatable-striped ui-datatable-sm ui-datatable-gridlines"
+                                     styleClass="products-table ui-datatable-sm ui-datatable-striped"
                                      style="font-size: small">
-                            <f:facet name="header">
-                                <div class="customers-table-header">
-                                    <span style="font-weight: bold">List of Business Partners</span>
-
-                                    <div>
-                                        <span class="ui-input-icon-left filter-container">
-                                            <i class="pi pi-search"></i>
-                                            <p:inputText id="globalFilter" onkeyup="PF('btable').filter()" placeholder="Search" styleClass="p-mr-2 p-mb-2"/>
-                                        </span>
-                                        <p:commandButton id="btnnew" title="New Business Partner" icon="fa fa-plus" process="@this"
-                                                         styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
-                                                         actionListener="#{businessPartnerController.newTab_In_newBtab()}"
-                                                         ajax="false" onclick="form.target = '_blank'"/>
-                                        <p:commandButton id="btnedit" title="New Business Partner" icon="fa fa-pencil" process="@this" 
-                                                         styleClass="#{systemDefaultsController.systemButtonStyle}"
-                                                         disabled="#{businessPartnerController.companyDisabled}" 
-                                                         actionListener="#{businessPartnerController.editTab_In_newBtab()}"
-                                                         ajax="false" onclick="form.target = '_blank'"/>
-                                    </div>
-                                </div>
-                            </f:facet>
-
-                            <p:ajax event="rowSelect" update=":busform:bustable:btnedit"/>
-                            <p:column headerText="Id" style="width: 20px; text-align: center"
-                                      sortBy="#{bus.partnerid}" filterBy="#{bus.partnerid}">
+                            <p:ajax event="rowSelect" update=":busform:btnedit"/>
+                            <p:column headerText="Id" style="width: 20px; text-align: center">
                                 <h:outputText value="#{bus.partnerid}" />
                             </p:column>
 
-                            <p:column headerText="Name" style="width: 20%" 
-                                      sortBy="#{bus.companyname}" filterBy="#{bus.companyname}">
+                            <p:column headerText="Name" style="width: 20%">
                                 <h:outputText value="#{bus.companyname}" />
                             </p:column>
 
-                            <p:column headerText="Email"
-                                      sortBy="#{bus.email1}" filterBy="#{bus.email1}">
+                            <p:column headerText="Email">
                                 <h:outputText value="#{bus.email1}" />
                             </p:column>
 
-                            <p:column headerText="Phone"
-                                      sortBy="#{bus.phone1}" filterBy="#{bus.phone1}">
+                            <p:column headerText="Phone">
                                 <h:outputText value="#{bus.phone1}" />
                             </p:column>
 
-                            <p:column headerText="Fax"
-                                      sortBy="#{bus.fax1}" filterBy="#{bus.fax1}">
+                            <p:column headerText="Fax">
                                 <h:outputText value="#{bus.fax1}" />
                             </p:column>
 
-                            <p:column headerText="Type"
-                                      sortBy="#{bus.companytypes}" filterBy="#{bus.companytypes}">
+                            <p:column headerText="Type">
                                 <h:outputText value="#{bus.companytypes}" />
                             </p:column>
 
-                            <p:column headerText="TRN No"
-                                      sortBy="#{bus.currentVatRegister.trnno}" filterBy="#{bus.currentVatRegister.trnno}">
+                            <p:column headerText="TRN No">
                                 <h:outputText value="#{bus.currentVatRegister.trnno}" />
                             </p:column>
 
-                            <p:column headerText="Vat Category"
-                                      sortBy="#{bus.currentVatRegister.vatcategoryid}" filterBy="#{bus.currentVatRegister.vatcategoryid}">
+                            <p:column headerText="Vat Category">
                                 <h:outputText value="#{bus.currentVatRegister.vatcategoryid}" />
                             </p:column>
 
-                            <p:column headerText="Vat Type"
-                                      sortBy="#{bus.currentVatRegister.vataccounttypeid}" filterBy="#{bus.currentVatRegister.vataccounttypeid}">
+                            <p:column headerText="Vat Type">
                                 <h:outputText value="#{bus.currentVatRegister.vataccounttypeid}" />
                             </p:column>
-                        </p:dataTable>
-                    </div>
+                        </p:dataTable>    
+                    </p:panel>
                 </div>
             </div>
         </h:form>
