--- a/src/main/resources/META-INF/resources/diamond-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/sidebar.xhtml
@@ -29,11 +29,14 @@
                                     icon="fas fa-book" 
                                     outcome="/accounts/coa.xhtml" />
                         <p:menuitem id="acc_genled" value="General Ledger"
-                                    icon="fas fa-book" 
+                                    icon="fas fa-book-open" 
                                     outcome="/accounts/ledger.xhtml" />
                         <p:menuitem id="busdoc_settings" value="Document Settings"
                                     icon="fas fa-sliders-h" 
                                     outcome="/busdoc/busdocsettings.xhtml" />
+                        <p:menuitem id="stock_ledger" value="Stock Ledger"
+                                    icon="far fa-list-alt" 
+                                    outcome="/inventory/stockledger.xhtml" />
                     </p:submenu>
                     <p:separator />
                     <p:submenu id="om_getstarted" label="Start" icon="pi pi-download">
