--- a/src/main/resources/META-INF/resources/accounts/ledger.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/ledger.xhtml
@@ -63,7 +63,7 @@
 
                 <div class="p-col-12">
                     <p:toolbar id="toolbar">
-                        <f:facet name="left">
+                        <f:facet name="right">
                             <p:commandButton id="exportPdf" icon="fa fa-file-pdf-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
                                 <p:tooltip value="Export to PDF" for="exportPdf"/>
                                 <l:dataExporter id="exportPdf" source="datalist" fileType="pdf" fileName="Ledger"/>
