--- a/src/main/resources/META-INF/resources/diamond-layout/template_simple.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template_simple.xhtml
@@ -22,6 +22,16 @@
     </h:head>
 
     <h:body>
+        <p:ajaxStatus styleClass="layout-ajax-loader">
+            <f:facet name="start">
+                <i class="pi pi-spin pi-spinner layout-ajax-loader-icon" aria-hidden="true"></i>
+            </f:facet>
+
+            <f:facet name="complete">
+                <h:outputText value="" />
+            </f:facet>
+        </p:ajaxStatus>
+
         <div class="layout-slim #{guestPreferences.sidebarThemeClass}" data-theme="#{guestPreferences.menuTheme}">
             <p:growl id="growl" showDetail="true" life="3000" widgetVar="growlW"/>
             <p:messages showDetail="true" />
@@ -33,28 +43,25 @@
                     <ui:include src="./topbar_simple.xhtml">
                         <ui:param name="viewname" value="#{viewname}" />
                     </ui:include>
-                    <div class="layout-content">
+                    <div class="layout-content less_padding">
                         <ui:insert name="content"></ui:insert>
                     </div>
                     <ui:include src="./footer.xhtml"></ui:include>
                 </h:form>
             </div>
-
-            <p:ajaxStatus styleClass="layout-ajax-loader">
-                <f:facet name="start">
-                    <i class="pi pi-spin pi-spinner layout-ajax-loader-icon" aria-hidden="true"></i>
-                </f:facet>
-
-                <f:facet name="complete">
-                    <h:outputText value="" />
-                </f:facet>
-            </p:ajaxStatus>
-
             <ui:include src="./search.xhtml"></ui:include>
             <ui:insert name="dialogpanel"></ui:insert>
             <div class="layout-mask modal-in"></div>
         </div>
+        <h:outputStylesheet id="layoutCSS">
+            .less_padding{
+            padding: 1em !important;
+            }
 
+            .vless_padding{
+            padding: 0.5em !important;
+            }
+        </h:outputStylesheet>
         <h:outputStylesheet library="webjars" name="font-awesome/5.12.0/css/all.min-jsf.css" />
         <h:outputStylesheet library="webjars" name="font-awesome/5.12.0/css/v4-shims.min-jsf.css" />
         <h:outputStylesheet name="css/nanoscroller.css"/>
